Address Codex review on parameter sweep (#57)
Fix seven issues flagged in the automated review of the sweep increment
(CLAUDE.md section 18):

- SweepDefinition: keep an unmodifiable LinkedHashMap copy instead of
  Map.copyOf so axis order follows TOML declaration order deterministically
  (the console/CSV column order and grid nesting depend on it).
- SweepParameterResolver: reject any axis whose own materialized size exceeds
  --max-combos before allocating it (C15), so a single wide range cannot OOM
  before the grid cap is checked; validate that an INTEGER range's from/to/step
  are all whole (C14), not only the step; and tighten the decimal endpoint
  tolerance to a rounding-only epsilon so a range never emits a value beyond the
  declared 'to' (e.g. from=0,to=1,step=0.6 yields 0,0.6 — not 1.2).
- SweepRunner: also record unchecked RuntimeExceptions (e.g. a bad swept period
  tripping a rule constructor in NachtkrappMatchIndex.buildFor) as failed rows
  instead of aborting the whole sweep.
- SweepConsoleReport: print the winner's full effective parameter set (base
  overlaid with swept values) in the paste-ready [parameters] block, so copying
  it reproduces the row instead of reverting fixed parameters to defaults.
- SweepCsvWriter: write with CREATE_NEW and a numeric collision suffix so two
  sweeps in the same UTC second never silently overwrite each other.
- WichtelmCli.describe: add a SweepConfigException branch rendering the C12-C15
  rule and offending key path, matching ConfigParseException.

Update CLAUDE.md section 18.1 to document the rounding-only endpoint tolerance
and the whole-number integer-range requirement. Add focused regression tests
for axis materialization and sweep output.

https://claude.ai/code/session_01SVo5ppf68im4MrUop3uW7X